Fix overflow on profiles

--- a/themes/Aurora/style.css
+++ b/themes/Aurora/style.css
@@ -801,6 +801,7 @@ tr:last-child td {
     border: 1px solid rgba(0, 0, 0, 0.5);
     background-image: linear-gradient(#ffffff3d, #00000012);
     word-wrap: break-word;
+    word-break: break-word;
 }
 
 .threadcontent,
